--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "npm": "12.18.2"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
